--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@langchain/community": "^0.0.19",
     "@langchain/core": "^0.1.17",
     "@langchain/openai": "^0.0.12",
+    "chromadb": "^1.8.1",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "langchain": "^0.1.5",
