--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.18.2",
     "langchain": "^0.1.5",
     "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2"
+    "pg": "^8.11.3",
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20"
   }
 }
